# AlphaZero-Connect6

./: .gitignore  .gitmodules  .travis.yml  3RD-PARTY.md  LICENSE  README.md  aliases.js  azure-pipelines.yml  index.html  search-index.js  source-files.js
AlphaZero/: README.md  model.py  random_policy.py  setup.py
AlphaZero/alphazero/: model.py  train.py
AlphaZero/cpp_weighted/: CMakeLists.txt  README.md  ReplayBuffer.hpp  main.cpp  model.hpp
AlphaZero/cpp_weighted/script/: build.bat  build.sh  config.bat  config.sh  run.bat  run.sh
AlphaZero/env/: __init__.py  buffer.py
AlphaZero/model/: baseline.py
AlphaZero/multiproc/: agent.py
AlphaZero/py_weighted/: README.md  buffer.py  play.py  train.py
AlphaZero/pyconnect6/: __init__.py  buffer.py  random_policy.py
AlphaZero/sample/: random_policy.py
AlphaZero/weighted/: README.md  model.py  play.py  train.py
AlphaZero/weighted/cpp_train/: CMakeLists.txt  ReplayBuffer.hpp  main.cpp  model.hpp
Connect6/: .gitignore  Cargo.toml  README.md  setup.py
Connect6/cppbind/: Cargo.toml  README.md  connect6.hpp  connect6_dec.hpp
Connect6/cppbind/headers/: connect6.hpp
Connect6/cppbind/headers/decl/: connect6.hpp
Connect6/cppbind/libcppconnect6/: Cargo.toml
Connect6/cppbind/libcppconnect6/src/: lib.rs
Connect6/cppbind/libcppconnect6/src/cppbind/: cpp_support.rs  mod.rs
Connect6/cppbind/libcppconnect6/src/cppbind/cpp_policy/: mod.rs  tests.rs
Connect6/cppbind/libcppconnect6/src/cppbind/cppeval/: mod.rs  tests.rs
Connect6/cppbind/libcppconnect6/src/cppbind/ffi_test/: mod.rs
Connect6/cppbind/libcppconnect6/src/cppbind/rawobj/: mod.rs  tests.rs
Connect6/cppbind/test_cppbind/: CMakeLists.txt  cpp_policy.cpp  cppeval.cpp  main.cpp  rawobj.cpp
Connect6/libconnect6/: Cargo.toml  README.md
Connect6/libconnect6/src/: lib.rs
Connect6/libconnect6/src/agent/: mod.rs
Connect6/libconnect6/src/agent/agent_impl/: mod.rs  tests.rs
Connect6/libconnect6/src/agent/async_agent/: mod.rs  tests.rs
Connect6/libconnect6/src/cppbind/: mod.rs  tests.rs
Connect6/libconnect6/src/cppbind/cppeval/: mod.rs  tests.rs
Connect6/libconnect6/src/cppbind/rawobj/: mod.rs  tests.rs
Connect6/libconnect6/src/game/: mod.rs
Connect6/libconnect6/src/game/game_impl/: mod.rs  tests.rs
Connect6/libconnect6/src/game/player/: mod.rs  tests.rs
Connect6/libconnect6/src/game/search_winner/: mod.rs  tests.rs
Connect6/libconnect6/src/macro_def/: mod.rs  support.rs
Connect6/libconnect6/src/policy/: mod.rs
Connect6/libconnect6/src/policy/alphazero_policy/: augment.rs  augment_tests.rs  mod.rs  tests.rs
Connect6/libconnect6/src/policy/default_policy/: mod.rs  tests.rs
Connect6/libconnect6/src/policy/io_policy/: mod.rs  tests.rs
Connect6/libconnect6/src/policy/multi_policy/: mod.rs  tests.rs
Connect6/libconnect6/src/policy/random_policy/: mod.rs  tests.rs
Connect6/libconnect6/src/policy/simulate/: mod.rs  tests.rs
Connect6/libconnect6/src/pybind/: mod.rs
Connect6/libconnect6/src/pybind/pybind_impl/: mod.rs  tests.rs
Connect6/libconnect6/src/pybind/pyeval/: mod.rs  tests.rs
Connect6/pybind/: README.md  setup.py
Connect6/pybind/libpyconnect6/: Cargo.toml
Connect6/pybind/libpyconnect6/src/: lib.rs
Connect6/pybind/libpyconnect6/src/macro_def/: mod.rs  support.rs
Connect6/pybind/libpyconnect6/src/pybind/pybind_impl/: mod.rs  tests.rs
Connect6/pybind/libpyconnect6/src/pybind/pyeval/: mod.rs  tests.rs
Connect6/pybind/pyconnect6/: __init__.py
Connect6/pybind/test_pybind/: requirements.txt  test_pybind.py
Connect6/pyconnect6/: __init__.py
Connect6/sample/: Cargo.toml  README.md
Connect6/sample/cpp/: CMakeLists.txt  build.ps1  build.sh  main.cpp
Connect6/sample/python/: random_policy.py
Connect6/sample/rust/: Cargo.toml
Connect6/sample/rust/src/: main.rs
Connect6/sample/src/: main.rs
Connect6/src/: game.rs  game_impl.rs  lib.rs
Connect6/src/agent/: mod.rs
Connect6/src/agent/agent_impl/: mod.rs  tests.rs
Connect6/src/agent/async_agent/: mod.rs  tests.rs
Connect6/src/agent/container/: mod.rs
Connect6/src/agent/io_interface/: mod.rs  tests.rs
Connect6/src/agent/random_play/: mod.rs  tests.rs
Connect6/src/game/: mod.rs
Connect6/src/game/game_impl/: mod.rs  tests.rs
Connect6/src/game/player/: mod.rs  tests.rs
Connect6/src/game/position/: mod.rs  tests.rs
Connect6/src/game/search_winner/: mod.rs  tests.rs
Connect6/src/game/winner_searcher/: mod.rs  tests.rs
Connect6/src/macro_def/: mod.rs  support.rs
Connect6/src/mcts/: mod.rs
Connect6/src/mcts/mcts_play/: mod.rs  tests.rs
Connect6/src/mcts/py_policy/: mod.rs
Connect6/src/mcts/simulate/: mod.rs  tests.rs
Connect6/src/mcts/tree/: mod.rs  policy_tests.rs  tests.rs
Connect6/src/policy/: mod.rs
Connect6/src/policy/alphazero_policy/: augment.rs  augment_tests.rs  mod.rs  tests.rs
Connect6/src/policy/default_policy/: mod.rs  tests.rs
Connect6/src/policy/io_policy/: mod.rs  tests.rs
Connect6/src/policy/multi_policy/: mod.rs  tests.rs
Connect6/src/policy/random_policy/: mod.rs  tests.rs
Connect6/src/policy/simulate/: mod.rs  tests.rs
Connect6/src/pybind/: mod.rs
Connect6/src/pybind/py_policy/: mod.rs  tests.rs
Connect6/src/pybind/pybind_impl/: mod.rs  tests.rs
Connect6/src/pybind/pyeval/: mod.rs  tests.rs
Connect6/tests/: game_tests.rs
connect6/: BOARD_CAPACITY.v.html  BOARD_SIZE.v.html  Board.t.html  all.html  constant.BOARD_CAPACITY.html  constant.BOARD_SIZE.html  index.html  io_policy_stdio.m.html  macro.io_policy_stdio.html  sidebar-items.js  type.Board.html
connect6/agent/: AsyncAgent.t.html  PlayResult.t.html  index.html  sidebar-items.js  struct.Agent.html  struct.AsyncAgent.html  struct.Path.html  (+1 more)
cppconnect6/: all.html  cpp_play.v.html  cpp_play_with.v.html  cpp_self_play.v.html  fn.cpp_play.html  fn.cpp_play_with.html  fn.cpp_self_play.html  index.html  sidebar-items.js
pyconnect6/: PyInit_pyconnect6.v.html  all.html  fn.PyInit_pyconnect6.html  index.html  macro.must!.html  macro.must.html  macro.py_policy!.html  macro.py_policy.html  sidebar-items.js
sample/: all.html  index.html
(+196 files in other folders)
