[package]
name = "connect6"
version = "0.1.0"
authors = ["revsic <revsic99@gmail.com>"]

[lib]
name = "connect6"
crate-type = ["dylib"]

[dependencies]
rand = { git = "https://github.com/revsic/rand" }
futures = "0.1.23"
tokio = "0.1.7"

[dependencies.cpython]
version = "0.1"
features = ["extension-module"]