[package]
name = "connect6"
version = "0.1.0"
authors = ["revsic <revsic99@gmail.com>"]

[lib]
name = "connect6"
crate-type = ["dylib", "staticlib"]

[dependencies]
rand = "0.6.0"
futures = "0.1.23"
tokio = "0.1.7"

[dependencies.cpython]
version = "0.2.0"
# for python3
# features = ["extension-module"]
# for python2
# default-features = false
# features = ["python27-sys", "extension-module-2-7"]

[badges]
travis-ci = { repository = "revsic/AlphaZero-Connect6", branch = "master" }
codecov = { repository = "revsic/AlphaZero-Connect6", branch = "master", service = "github" }
