[package]
name = "connect6"
version = "0.1.0"
authors = ["revsic <revsic99@gmail.com>"]

[lib]
name = "connect6"
crate-type = ["dylib", "staticlib"]

[dependencies]
cpython = "0.2"
futures = "0.1.23"
rand = "0.6.0"
tokio = "0.1.7"

[badges]
travis-ci = { repository = "revsic/AlphaZero-Connect6", branch = "master" }
codecov = { repository = "revsic/AlphaZero-Connect6", branch = "master", service = "github" }
