[package]
name = "pyconnect6"
version = "0.1.0"
authors = ["revsic <revsic99@gmail.com>"]

[lib]
name = "pyconnect6"
crate-type = ["rlib", "cdylib"]

[dependencies]
connect6 = { path = "../../libconnect6" }
rand = "0.6.0"

[dependencies.cpython]
version = "0.2"
# add features explicitly when exception occured on test_pybind
# features = ["extension-module"]